--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,9 @@ span {
   .modal-container {
     flex-direction: column;
     align-items: center;
+    padding: 1.5rem;
+    max-height: calc(90vh - 4rem); 
+    overflow-y: auto;
   }
 
   .modal-image {
@@ -635,6 +638,8 @@ span {
   .modal-content {
     width: 95%;
     margin: 2% auto;
+    max-height: 90vh;
+    overflow-y: auto;
   }
 
   .modal-section h4 {
@@ -667,7 +672,9 @@ span {
   }
 
   .modal-text {
+    width: 100%;
     padding-right: 0;
+    margin-bottom: 2rem;
   }
 }
 @media (max-width: 768px) {
